Adds a previewer block, gets a bit moving on the adorabets CSS
need to pull stuff out of normalize.css

--- a/drupal/sites/all/modules/custom/ald_previewer/css/previewer.css
+++ b/drupal/sites/all/modules/custom/ald_previewer/css/previewer.css
@@ -5,3 +5,20 @@
 .ald-image {
     width: 10%;
 }
+
+.block-ald-previewer {
+    text-align: center;
+}
+
+#ald-echo img:first-child {
+    border-left: 16px solid black;
+}
+
+#ald-echo img {
+    border-top: 16px solid black;
+    border-bottom: 16px solid black;
+}
+
+#ald-echo img:last-child {
+    border-right: 16px solid black;
+}
