--- a/drupal/sites/all/modules/custom/ald_previewer/css/previewer.css
+++ b/drupal/sites/all/modules/custom/ald_previewer/css/previewer.css
@@ -6,19 +6,43 @@
     width: 10%;
 }
 
+.ald-spacer {
+    width: 1%;
+    display: inline-block;
+}
+
 .block-ald-previewer {
     text-align: center;
 }
 
-#ald-echo img:first-child {
-    border-left: 16px solid black;
+/*#ald-echo img:first-child {
+    border-left: 6px solid black;
 }
 
 #ald-echo img {
-    border-top: 16px solid black;
-    border-bottom: 16px solid black;
+    border-top: 6px solid black;
+    border-bottom: 6px solid black;
 }
 
 #ald-echo img:last-child {
-    border-right: 16px solid black;
+    border-right: 6px solid black;
+}
+*/
+#block-ald-previewer-ald-previewer .instructions {
+    text-align: left;
+    display: block;
+    margin-left: 20%;
+    width: 50%;
+}
+
+.shadower {
+    height: 1px;
+    margin: 0;
+    -webkit-box-shadow: 0px 0px 5px 0px #666;
+            box-shadow: 0px 0px 5px 0px #666;
+
+}
+
+.shadower:last-child {
+    margin-top: -5px;
 }
