--- a/drupal/sites/all/themes/adorazen-blue/sass/nodes.scss
+++ b/drupal/sites/all/themes/adorazen-blue/sass/nodes.scss
@@ -32,6 +32,11 @@
 }
 
 .node-promoted { /* A node that has been promoted to the front page */
+  header {
+    .node-title {
+      display: none;
+    }
+  }
 }
 
 .node-sticky { /* A sticky node (displayed before others in a list) */
