--- a/drupal/sites/all/themes/adorazen-blue/css/navigation.css
+++ b/drupal/sites/all/themes/adorazen-blue/css/navigation.css
@@ -79,8 +79,24 @@ li a.active {
 #main-menu {
   float: right;
 }
+/* line 83, ../sass/navigation.scss */
+#main-menu li {
+  background-color: #f7931b;
+  width: 3em;
+  height: 3em;
+  white-space: nowrap;
+  margin: 0.5em;
+}
+/* line 89, ../sass/navigation.scss */
+#main-menu li a {
+  position: relative;
+  top: 1em;
+  left: -1.25em;
+  text-decoration: none;
+  color: #003e67;
+}
 
-/* line 88, ../sass/navigation.scss */
+/* line 99, ../sass/navigation.scss */
 #secondary-menu {
   float: right;
   /* LTR */
