--- a/drupal/sites/all/themes/adorazen-blue/css/normalize.css
+++ b/drupal/sites/all/themes/adorazen-blue/css/normalize.css
@@ -124,7 +124,7 @@ button,
 input,
 select,
 textarea {
-  font-family: Georgia, "Times New Roman", "DejaVu Serif", serif;
+  font-family: Verdana, Tahoma, "DejaVu Sans", sans-serif;
 }
 
 /*
