--- a/drupal/sites/all/themes/adorazen-blue/css/pages.css
+++ b/drupal/sites/all/themes/adorazen-blue/css/pages.css
@@ -37,7 +37,12 @@ body {
 /*
  * Header
  */
-/* line 51, ../sass/pages.scss */
+/* line 48, ../sass/pages.scss */
+#header {
+  margin-bottom: 2em;
+}
+
+/* line 52, ../sass/pages.scss */
 #logo {
   /* Wrapping link for logo */
   float: left;
@@ -45,15 +50,18 @@ body {
   margin: 0;
   padding: 0;
 }
-/* line 56, ../sass/pages.scss */
+/* line 57, ../sass/pages.scss */
 #logo img {
   vertical-align: bottom;
 }
 
-/* line 65, ../sass/pages.scss */
+/* line 66, ../sass/pages.scss */
 #name-and-slogan {
   /* Wrapper for website name and slogan */
+  position: relative;
   float: left;
+  height: 6em;
+  margin-top: 1em;
   width: 540px;
   background-color: white;
   -webkit-background-size: 15px 15px;
@@ -67,34 +75,46 @@ body {
   background-image: linear-gradient(0deg, #00a6c4 50%, transparent 50%, transparent);
 }
 
-/* line 83, ../sass/pages.scss */
+/* line 87, ../sass/pages.scss */
 #site-name {
   /* The name of the website */
-  margin: 0;
+  margin: 0 0 0 0.1em;
   font-size: 10em;
   white-space: nowrap;
-  line-height: 1.5em;
+  line-height: 1.8em;
+  font-family: Georgia, "Times New Roman", "DejaVu Serif", serif;
+  color: #003e67;
 }
-/* line 90, ../sass/pages.scss */
+/* line 94, ../sass/pages.scss */
+#site-name span {
+  text-shadow: 0.05em 0.02em 0.2em #ccc;
+}
+/* line 100, ../sass/pages.scss */
 #site-name a:link,
 #site-name a:visited {
-  color: #000;
+  color: #003e67;
   text-decoration: none;
 }
-/* line 96, ../sass/pages.scss */
+/* line 106, ../sass/pages.scss */
 #site-name a:hover,
 #site-name a:focus {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
-/* line 101, ../sass/pages.scss */
+/* line 111, ../sass/pages.scss */
 #site-slogan {
   /* The slogan (or tagline) of a website */
   margin: 0;
-  font-size: 1em;
+  font-size: 3.5em;
+  position: absolute;
+  top: 2.75em;
+  left: 8.5em;
+  color: #f7931b;
+  white-space: nowrap;
+  display: none;
 }
 
-/* line 106, ../sass/pages.scss */
+/* line 130, ../sass/pages.scss */
 .region-header {
   /* Wrapper for any blocks placed in the header region */
   clear: both;
@@ -107,16 +127,16 @@ body {
 /*
  * Content
  */
-/* line 127, ../sass/pages.scss */
+/* line 151, ../sass/pages.scss */
 .breadcrumb {
   /* The path to the current page in the form of a list of links */
 }
-/* line 128, ../sass/pages.scss */
+/* line 152, ../sass/pages.scss */
 .breadcrumb ol {
   margin: 0;
   padding: 0;
 }
-/* line 132, ../sass/pages.scss */
+/* line 156, ../sass/pages.scss */
 .breadcrumb li {
   display: inline;
   list-style-type: none;
@@ -124,7 +144,7 @@ body {
   padding: 0;
 }
 
-/* line 145, ../sass/pages.scss */
+/* line 169, ../sass/pages.scss */
 h1.title,
 h2.node-title,
 h2.block-title,
@@ -135,37 +155,37 @@ h3.title {
   margin: 0;
 }
 
-/* line 149, ../sass/pages.scss */
+/* line 173, ../sass/pages.scss */
 tr.even {
   /* Some tables have rows marked even or odd. */
   /* background-color: #eee; */
   /* Drupal core uses a #eee background */
 }
 
-/* line 153, ../sass/pages.scss */
+/* line 177, ../sass/pages.scss */
 tr.odd {
   /* background-color: #eee; */
   /* Drupal core uses a #eee background */
 }
 
-/* line 157, ../sass/pages.scss */
+/* line 181, ../sass/pages.scss */
 div.messages {
   /* Important messages (status, warning, and error) for the user. See also the declarations in messages.css. */
   margin: 1.5em 0;
   /* Drupal core uses "6px 0" margin */
 }
-/* line 160, ../sass/pages.scss */
+/* line 184, ../sass/pages.scss */
 div.messages ul {
   margin-top: 0;
   margin-bottom: 0;
 }
 
-/* line 166, ../sass/pages.scss */
+/* line 190, ../sass/pages.scss */
 div.status {
   /* Normal priority messages */
 }
 
-/* line 170, ../sass/pages.scss */
+/* line 194, ../sass/pages.scss */
 div.warning,
 tr.warning {
   /* Medium priority messages */
@@ -173,53 +193,53 @@ tr.warning {
   /* Drupal core uses: 1px solid #f0c020 */
 }
 
-/* line 175, ../sass/pages.scss */
+/* line 199, ../sass/pages.scss */
 div.error,
 tr.error {
   /* High priority messages. See also the .error declaration below. */
 }
 
-/* line 178, ../sass/pages.scss */
+/* line 202, ../sass/pages.scss */
 .error {
   /* Errors that are separate from div.messages status messages. */
   /* color: #e55; */
   /* Drupal core uses a #e55 background */
 }
 
-/* line 182, ../sass/pages.scss */
+/* line 206, ../sass/pages.scss */
 .warning {
   /* Warnings that are separate from div.messages status messages. */
   /* color: #e09010; */
   /* Drupal core uses a #e09010 background */
 }
 
-/* line 186, ../sass/pages.scss */
+/* line 210, ../sass/pages.scss */
 .tabs {
   /* See also the tabs.css file. */
 }
 
-/* line 189, ../sass/pages.scss */
+/* line 213, ../sass/pages.scss */
 .region-help {
   /* Help text on a page */
 }
 
-/* line 192, ../sass/pages.scss */
+/* line 216, ../sass/pages.scss */
 .more-help-link {
   /* Link to more help */
 }
 
-/* line 195, ../sass/pages.scss */
+/* line 219, ../sass/pages.scss */
 .region-content {
   /* Wrapper for the actual page content */
 }
 
-/* line 198, ../sass/pages.scss */
+/* line 222, ../sass/pages.scss */
 ul.inline {
   /* List of links generated by theme_links() */
   display: inline;
   padding: 0;
 }
-/* line 202, ../sass/pages.scss */
+/* line 226, ../sass/pages.scss */
 ul.inline li {
   display: inline;
   list-style-type: none;
@@ -227,25 +247,25 @@ ul.inline li {
   /* LTR */
 }
 
-/* line 208, ../sass/pages.scss */
+/* line 232, ../sass/pages.scss */
 span.field-label {
   /* The inline field label used by the Fences module */
   padding: 0 1em 0 0;
   /* LTR */
 }
 
-/* line 212, ../sass/pages.scss */
+/* line 236, ../sass/pages.scss */
 .item-list .pager {
   /* A list of page numbers when more than 1 page of content is available */
   padding: 0;
 }
-/* line 215, ../sass/pages.scss */
+/* line 239, ../sass/pages.scss */
 .item-list .pager li {
   /* Each page number in the pager list */
   padding: 0 0.5em;
 }
 
-/* line 220, ../sass/pages.scss */
+/* line 244, ../sass/pages.scss */
 .feed-icon {
   /* The link to the RSS or Atom feed for the current list of content */
   position: fixed;
@@ -253,7 +273,7 @@ span.field-label {
   right: 0;
 }
 
-/* line 226, ../sass/pages.scss */
+/* line 250, ../sass/pages.scss */
 .more-link {
   /* Aggregator, blog, and forum more link */
 }
@@ -276,7 +296,7 @@ span.field-label {
 /*
  * Page bottom
  */
-/* line 260, ../sass/pages.scss */
+/* line 284, ../sass/pages.scss */
 .region-bottom {
   /* Wrapper for any blocks placed in the page bottom region */
 }
