--- a/drupal/sites/all/themes/adorazen-blue/sass/_base.scss
+++ b/drupal/sites/all/themes/adorazen-blue/sass/_base.scss
@@ -73,9 +73,13 @@ $arial:           Arial, Helvetica, "Nimbus Sans L", sans-serif;
 $courier:         "Courier New", "DejaVu Sans Mono", monospace, sans-serif;
 
 // Now create some variables for the font stacks we want to use on this site.
-$base-font-family: $georgia; // The font family set on the html element.
+$base-font-family: $verdana; // The font family set on the html element.
 $font-body:        $georgia;
 $font-monospace:   $courier;
+
+$orangey: rgb(247, 147, 27);
+$blue-or-so: #003e67;
+$other-blue: rgb(0, 165, 196);
 
 
 //
