--- a/drupal/sites/all/themes/adorazen-blue/sass/navigation.scss
+++ b/drupal/sites/all/themes/adorazen-blue/sass/navigation.scss
@@ -81,10 +81,21 @@ li a.active {
 #main-menu {
   float: right;
   li  {
-    // display: block;
+      background-color: $orangey;
+      width: 3em;
+      height: 3em;
+      white-space: nowrap;
+      margin: 0.5em;
+      a {
+        position: relative;
+        top: 1em;
+        left: -1.25em;
+        text-decoration: none;
+        color: #003e67;
+      }
+
   }
 }
-
 #secondary-menu {
   float: right; /* LTR */
 }
