--- a/drupal/sites/all/themes/adorazen-blue/sass/pages.scss
+++ b/drupal/sites/all/themes/adorazen-blue/sass/pages.scss
@@ -46,6 +46,7 @@ body {
  */
 
 #header {
+  margin-bottom: 2em;
 }
 
 #logo { /* Wrapping link for logo */
@@ -63,7 +64,10 @@ $stripe-size: 15px;
 $stripe-count: 36;
 
 #name-and-slogan { /* Wrapper for website name and slogan */
+  position: relative;
   float: left;
+  height: 6em;
+  margin-top: 1em;
   width: $stripe-count * $stripe-size;
 
   background-color: white;
@@ -81,26 +85,46 @@ $stripe-count: 36;
 }
 
 #site-name { /* The name of the website */
-  margin: 0;
+  margin: 0 0 0 0.1em;
   font-size: 10em;
   white-space: nowrap;
-  line-height: 1.5em;
+  line-height: 1.8em;
+  font-family: $georgia;
+  color: $blue-or-so;
+  span {
+
+    text-shadow: 0.05em 0.02em 0.2em #ccc;
+  }
 
   a:link,
   a:visited {
-    color: #000;
+    color: $blue-or-so;
     text-decoration: none;
   }
 
   a:hover,
   a:focus {
-    text-decoration: underline;
+    text-decoration: none;
   }
 }
 
 #site-slogan { /* The slogan (or tagline) of a website */
   margin: 0;
-  font-size: 1em;
+  font-size: 3.5em;
+  position: absolute;
+  top: 2.75em;
+  left: 8.5em;
+  color: $orangey;
+  white-space: nowrap;
+  display: none;
+  // span {
+  //   font-size: 2em;
+  //   display: inline-block;
+  //   position: relative;
+  //   top: -0.5em;
+  //   left: 0.5em;
+  // }
+
 }
 
 .region-header { /* Wrapper for any blocks placed in the header region */
