--- a/drupal/sites/all/themes/adorazen-blue/css/pages.css
+++ b/drupal/sites/all/themes/adorazen-blue/css/pages.css
@@ -1,302 +1,1 @@
-/**
- * @file
- * Page Styling
- *
- * Style the markup found in page.tpl.php. Also includes some styling of
- * miscellaneous Drupal elements that appear in the $content variable, such as
- * ul.links, .pager, .more-link, etc.
- */
-/*
- * Body
- */
-/* line 17, ../sass/pages.scss */
-body {
-  margin: 0;
-  padding: 0;
-}
-
-/*
- * The skip-link link will be completely hidden until a user tabs to the link.
- * See the element-focusable rule in system.base.css.
- */
-/* line 30, ../sass/pages.scss */
-#skip-link {
-  margin: 0;
-}
-/* line 34, ../sass/pages.scss */
-#skip-link a,
-#skip-link a:visited {
-  display: block;
-  width: 100%;
-  padding: 2px 0 3px 0;
-  text-align: center;
-  background-color: #666;
-  color: #fff;
-}
-
-/*
- * Header
- */
-/* line 48, ../sass/pages.scss */
-#header {
-  margin-bottom: 2em;
-}
-
-/* line 52, ../sass/pages.scss */
-#logo {
-  /* Wrapping link for logo */
-  float: left;
-  /* LTR */
-  margin: 0;
-  padding: 0;
-}
-/* line 57, ../sass/pages.scss */
-#logo img {
-  vertical-align: bottom;
-}
-
-/* line 66, ../sass/pages.scss */
-#name-and-slogan {
-  /* Wrapper for website name and slogan */
-  position: relative;
-  float: left;
-  height: 6em;
-  margin-top: 1em;
-  width: 540px;
-  background-color: white;
-  -webkit-background-size: 15px 15px;
-  -moz-background-size: 15px 15px;
-  background-size: 15px 15px;
-  background-image: -webkit-gradient(linear, 0 0, 100% 0, color-stop(0.5, #00a6c4), color-stop(0.5, transparent), to(transparent));
-  background-image: -webkit-linear-gradient(0deg, #00a6c4 50%, transparent 50%, transparent);
-  background-image: -moz-linear-gradient(0deg, #00a6c4 50%, transparent 50%, transparent);
-  background-image: -ms-linear-gradient(0deg, #00a6c4 50%, transparent 50%, transparent);
-  background-image: -o-linear-gradient(0deg, #00a6c4 50%, transparent 50%, transparent);
-  background-image: linear-gradient(0deg, #00a6c4 50%, transparent 50%, transparent);
-}
-
-/* line 87, ../sass/pages.scss */
-#site-name {
-  /* The name of the website */
-  margin: 0 0 0 0.1em;
-  font-size: 10em;
-  white-space: nowrap;
-  line-height: 1.8em;
-  font-family: Georgia, "Times New Roman", "DejaVu Serif", serif;
-  color: #003e67;
-}
-/* line 94, ../sass/pages.scss */
-#site-name span {
-  text-shadow: 0.05em 0.02em 0.2em #ccc;
-}
-/* line 100, ../sass/pages.scss */
-#site-name a:link,
-#site-name a:visited {
-  color: #003e67;
-  text-decoration: none;
-}
-/* line 106, ../sass/pages.scss */
-#site-name a:hover,
-#site-name a:focus {
-  text-decoration: none;
-}
-
-/* line 111, ../sass/pages.scss */
-#site-slogan {
-  /* The slogan (or tagline) of a website */
-  margin: 0;
-  font-size: 3.5em;
-  position: absolute;
-  top: 2.75em;
-  left: 8.5em;
-  color: #f7931b;
-  white-space: nowrap;
-  display: none;
-}
-
-/* line 130, ../sass/pages.scss */
-.region-header {
-  /* Wrapper for any blocks placed in the header region */
-  clear: both;
-  /* Clear the logo */
-}
-
-/*
- * Main (container for everything else)
- */
-/*
- * Content
- */
-/* line 151, ../sass/pages.scss */
-.breadcrumb {
-  /* The path to the current page in the form of a list of links */
-}
-/* line 152, ../sass/pages.scss */
-.breadcrumb ol {
-  margin: 0;
-  padding: 0;
-}
-/* line 156, ../sass/pages.scss */
-.breadcrumb li {
-  display: inline;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-/* line 169, ../sass/pages.scss */
-h1.title,
-h2.node-title,
-h2.block-title,
-h2.title,
-h2.comment-form,
-h3.title {
-  /* Comment title */
-  margin: 0;
-}
-
-/* line 173, ../sass/pages.scss */
-tr.even {
-  /* Some tables have rows marked even or odd. */
-  /* background-color: #eee; */
-  /* Drupal core uses a #eee background */
-}
-
-/* line 177, ../sass/pages.scss */
-tr.odd {
-  /* background-color: #eee; */
-  /* Drupal core uses a #eee background */
-}
-
-/* line 181, ../sass/pages.scss */
-div.messages {
-  /* Important messages (status, warning, and error) for the user. See also the declarations in messages.css. */
-  margin: 1.5em 0;
-  /* Drupal core uses "6px 0" margin */
-}
-/* line 184, ../sass/pages.scss */
-div.messages ul {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-/* line 190, ../sass/pages.scss */
-div.status {
-  /* Normal priority messages */
-}
-
-/* line 194, ../sass/pages.scss */
-div.warning,
-tr.warning {
-  /* Medium priority messages */
-  /* border: 1px solid #f0c020; */
-  /* Drupal core uses: 1px solid #f0c020 */
-}
-
-/* line 199, ../sass/pages.scss */
-div.error,
-tr.error {
-  /* High priority messages. See also the .error declaration below. */
-}
-
-/* line 202, ../sass/pages.scss */
-.error {
-  /* Errors that are separate from div.messages status messages. */
-  /* color: #e55; */
-  /* Drupal core uses a #e55 background */
-}
-
-/* line 206, ../sass/pages.scss */
-.warning {
-  /* Warnings that are separate from div.messages status messages. */
-  /* color: #e09010; */
-  /* Drupal core uses a #e09010 background */
-}
-
-/* line 210, ../sass/pages.scss */
-.tabs {
-  /* See also the tabs.css file. */
-}
-
-/* line 213, ../sass/pages.scss */
-.region-help {
-  /* Help text on a page */
-}
-
-/* line 216, ../sass/pages.scss */
-.more-help-link {
-  /* Link to more help */
-}
-
-/* line 219, ../sass/pages.scss */
-.region-content {
-  /* Wrapper for the actual page content */
-}
-
-/* line 222, ../sass/pages.scss */
-ul.inline {
-  /* List of links generated by theme_links() */
-  display: inline;
-  padding: 0;
-}
-/* line 226, ../sass/pages.scss */
-ul.inline li {
-  display: inline;
-  list-style-type: none;
-  padding: 0 1em 0 0;
-  /* LTR */
-}
-
-/* line 232, ../sass/pages.scss */
-span.field-label {
-  /* The inline field label used by the Fences module */
-  padding: 0 1em 0 0;
-  /* LTR */
-}
-
-/* line 236, ../sass/pages.scss */
-.item-list .pager {
-  /* A list of page numbers when more than 1 page of content is available */
-  padding: 0;
-}
-/* line 239, ../sass/pages.scss */
-.item-list .pager li {
-  /* Each page number in the pager list */
-  padding: 0 0.5em;
-}
-
-/* line 244, ../sass/pages.scss */
-.feed-icon {
-  /* The link to the RSS or Atom feed for the current list of content */
-  position: fixed;
-  top: 0;
-  right: 0;
-}
-
-/* line 250, ../sass/pages.scss */
-.more-link {
-  /* Aggregator, blog, and forum more link */
-}
-
-/*
- * First sidebar (on left in LTR languages, on right in RTL)
- *
- * Remember to NOT add padding or margin to your .region-sidebar-first
- * (see the layout.css file.)
- */
-/*
- * Second sidebar (on right in LTR languages, on left in RTL)
- *
- * Remember to NOT add padding or margin to your .region-sidebar-second
- * (see the layout.css file.)
- */
-/*
- * Footer
- */
-/*
- * Page bottom
- */
-/* line 284, ../sass/pages.scss */
-.region-bottom {
-  /* Wrapper for any blocks placed in the page bottom region */
-}
+body{margin:0;padding:0}#skip-link{margin:0}#skip-link a,#skip-link a:visited{display:block;width:100%;padding:2px 0 3px 0;text-align:center;background-color:#666;color:#fff}#header{margin-bottom:2em}#logo{float:left;margin:0;padding:0}#logo img{vertical-align:bottom}#name-and-slogan{position:relative;float:left;height:6em;margin-top:1em;width:540px;background-color:white;-webkit-background-size:15px 15px;-moz-background-size:15px 15px;background-size:15px 15px;background-image:-webkit-gradient(linear, 0 0, 100% 0, color-stop(0.5, #00a6c4), color-stop(0.5, transparent), to(transparent));background-image:-webkit-linear-gradient(0deg, #00a6c4 50%, transparent 50%, transparent);background-image:-moz-linear-gradient(0deg, #00a6c4 50%, transparent 50%, transparent);background-image:-ms-linear-gradient(0deg, #00a6c4 50%, transparent 50%, transparent);background-image:-o-linear-gradient(0deg, #00a6c4 50%, transparent 50%, transparent);background-image:linear-gradient(0deg, #00a6c4 50%,transparent 50%,transparent)}#site-name{margin:0 0 0 0.1em;font-size:10em;white-space:nowrap;line-height:1.8em;font-family:Georgia,"Times New Roman","DejaVu Serif",serif;color:#003e67}#site-name span{text-shadow:0.05em 0.02em 0.2em #ccc}#site-name a:link,#site-name a:visited{color:#003e67;text-decoration:none}#site-name a:hover,#site-name a:focus{text-decoration:none}#site-slogan{margin:0;font-size:3.5em;position:absolute;top:2.75em;left:8.5em;color:#f7931b;white-space:nowrap;display:none}.region-header{clear:both}.breadcrumb ol{margin:0;padding:0}.breadcrumb li{display:inline;list-style-type:none;margin:0;padding:0}h1.title,h2.node-title,h2.block-title,h2.title,h2.comment-form,h3.title{margin:0}div.messages{margin:1.5em 0}div.messages ul{margin-top:0;margin-bottom:0}ul.inline{display:inline;padding:0}ul.inline li{display:inline;list-style-type:none;padding:0 1em 0 0}span.field-label{padding:0 1em 0 0}.item-list .pager{padding:0}.item-list .pager li{padding:0 0.5em}.feed-icon{position:fixed;top:0;right:0}
