--- a/drupal/sites/all/themes/adorazen-blue/css/nodes.css
+++ b/drupal/sites/all/themes/adorazen-blue/css/nodes.css
@@ -1,110 +1,1 @@
-/**
- * @file
- * Node Styling
- *
- * Style anything that isn't in the $content variable.
- */
-/* line 11, ../sass/nodes.scss */
-.node {
-  /* Node wrapper */
-}
-/* line 13, ../sass/nodes.scss */
-.preview .node {
-  /* Preview of the content before submitting new or updated content */
-  /* background-color: #ffffea; */
-  /* Drupal core uses a #ffffea background */
-}
-/* line 17, ../sass/nodes.scss */
-.node .node-title {
-  /* Node title */
-}
-/* line 20, ../sass/nodes.scss */
-.node .user-picture {
-  /* The picture of the node author */
-}
-/* line 23, ../sass/nodes.scss */
-.node .submitted {
-  /* The "posted by" information */
-}
-/* line 26, ../sass/nodes.scss */
-.node .content {
-  /* Node's content wrapper */
-}
-/* line 29, ../sass/nodes.scss */
-.node ul.links {
-  /* Node links. See also the ul.links declaration in the pages.css. */
-}
-
-/* line 34, ../sass/nodes.scss */
-.node-promoted {
-  /* A node that has been promoted to the front page */
-}
-/* line 37, ../sass/nodes.scss */
-.node-promoted header .node-title a {
-  color: #00a5c4;
-  text-decoration: none;
-  font-size: 4.5em;
-  white-space: nowrap;
-  font-family: Helvetica, Arial, "Nimbus Sans L", sans-serif;
-}
-/* line 44, ../sass/nodes.scss */
-.node-promoted header .node-title:before {
-  content: "presents";
-  color: #f7931b;
-  font-family: papyrus;
-  font-size: 2em;
-  position: relative;
-  top: -2em;
-  left: 2em;
-}
-
-/* line 57, ../sass/nodes.scss */
-.node-sticky {
-  /* A sticky node (displayed before others in a list) */
-}
-
-/* line 60, ../sass/nodes.scss */
-.node-by-viewer {
-  /* A node created by the current user */
-}
-
-/* line 63, ../sass/nodes.scss */
-.node-teaser {
-  /* A node displayed as teaser */
-}
-
-/*
- * All nodes are given a node-FOO class that describes the type of content that
- * it is. If you create a new content type called "my-custom-type", it will
- * receive a "node-my-custom-type" class.
- */
-/* line 72, ../sass/nodes.scss */
-.node-page {
-  /* Page content node */
-}
-
-/* line 75, ../sass/nodes.scss */
-.node-article {
-  /* Article content node */
-}
-
-/* line 78, ../sass/nodes.scss */
-.node-unpublished {
-  /* Unpublished nodes */
-  /* background-color: #fff4f4; */
-  /* Drupal core uses a #fff4f4 background */
-}
-/* line 81, ../sass/nodes.scss */
-.node-unpublished p.unpublished {
-  /* The word "Unpublished" displayed underneath the content. */
-  height: 0;
-  overflow: visible;
-  color: #d8d8d8;
-  font-size: 75px;
-  line-height: 1;
-  font-family: Impact, "Arial Narrow", Helvetica, sans-serif;
-  font-weight: bold;
-  text-transform: uppercase;
-  text-align: center;
-  word-wrap: break-word;
-}
+.node-promoted header .node-title a{color:#00a5c4;text-decoration:none;font-size:4.5em;white-space:nowrap;font-family:Helvetica,Arial,"Nimbus Sans L",sans-serif}.node-promoted header .node-title:before{content:"presents";color:#f7931b;font-family:papyrus;font-size:2em;position:relative;top:-2em;left:2em}.node-unpublished p.unpublished{height:0;overflow:visible;color:#d8d8d8;font-size:75px;line-height:1;font-family:Impact, "Arial Narrow", Helvetica, sans-serif;font-weight:bold;text-transform:uppercase;text-align:center;word-wrap:break-word}
