A couple style tweaks, adding some features

--- a/drupal/sites/all/themes/adorazen-blue/css/decoration.css
+++ b/drupal/sites/all/themes/adorazen-blue/css/decoration.css
@@ -1,1 +1,1 @@
-.decorative-bar{border:0;margin:0.5em auto;width:50%;height:0.1em;background-color:#00a5c4}.decorative-bar.long{width:70%}.decorative-bar.fat{height:0.4em}.decorative-circle{width:3em;height:3em;border-radius:1.5em;background-color:#003e67;float:right;margin:0 1em}
+.decorative-bar{border:0;margin:0.5em auto;width:50%;height:0.2em;background-color:#00a5c4}.decorative-bar.long{width:70%}.decorative-bar.skinny{height:0.1em}.decorative-bar.fat{height:0.4em}.decorative-circle{width:3em;height:3em;border-radius:1.5em;background-color:#1a4079;float:right;margin:0 1em}
