--- a/drupal/sites/all/themes/adorazen-blue/sass/_base.scss
+++ b/drupal/sites/all/themes/adorazen-blue/sass/_base.scss
@@ -78,7 +78,7 @@ $font-body:        $georgia;
 $font-monospace:   $courier;
 
 $orangey: rgb(247, 147, 27);
-$blue-or-so: #003e67;
+$blue-or-so: #1a4079;
 $other-blue: rgb(0, 165, 196);
 
 
