--- a/drupal/sites/all/themes/adorazen-blue/sass/decoration.scss
+++ b/drupal/sites/all/themes/adorazen-blue/sass/decoration.scss
@@ -4,12 +4,14 @@
     border: 0;
     margin: 0.5em auto;
     width: 50%;
-    height: 0.1em;
+    height: 0.2em;
     background-color: $other-blue;
     &.long{
         width: 70%;
     }
-    &.skinny{}
+    &.skinny{
+        height: 0.1em;
+    }
     &.fat{
         height: 0.4em;
     }
