--- a/drupal/sites/all/themes/adorazen-blue/sass/layouts/responsive-sidebars.scss
+++ b/drupal/sites/all/themes/adorazen-blue/sass/layouts/responsive-sidebars.scss
@@ -103,10 +103,12 @@ $zen-auto-include-item-base: false;
   .sidebar-second {
     #content { /* Span 2 columns, starting in 1st column from left. */
       @include zen-grid-item(2, 1);
+      // @include zen-grid-item(2, 2);
     }
 
     .region-sidebar-second { /* Span 1 column, starting in 3rd column from left. */
       @include zen-grid-item(1, 3);
+      // @include zen-grid-item(1, 1);
     }
   }
 }
@@ -122,12 +124,14 @@ $zen-auto-include-item-base: false;
    */
 
   .sidebar-second {
-    #content { /* Span 4 columns, starting in 1st column from left. */
+    #content { /* Span 3 columns, starting in 1st column from left. */
       @include zen-grid-item(3, 1);
+      // @include zen-grid-item(3, 3);
     }
 
-    .region-sidebar-second { /* Span 1 column, starting in 5th column from left. */
+    .region-sidebar-second { /* Span 2 columns, starting in 5th column from left. */
       @include zen-grid-item(2, 4);
+      // @include zen-grid-item(2, 1);
     }
   }
 }
