--- a/drupal/sites/all/themes/adorazen-blue/sass/nodes.scss
+++ b/drupal/sites/all/themes/adorazen-blue/sass/nodes.scss
@@ -34,6 +34,7 @@
 .node-promoted { /* A node that has been promoted to the front page */
   header {
     .node-title {
+      margin-bottom: 1.5em;
       a {
         color: $other-blue;
         text-decoration: none;
@@ -45,9 +46,9 @@
         content: "presents";
         color: $orangey;
         font-family: papyrus;
-        font-size: 2em;
+        font-size: 2/3 * 2em;
         position: relative;
-        top: -2em;
+        top: -3em;
         left: 2em;
       }
     }
