--- a/drupal/sites/all/themes/adorazen-blue/sass/navigation.scss
+++ b/drupal/sites/all/themes/adorazen-blue/sass/navigation.scss
@@ -78,17 +78,19 @@ li a.active {
  * Main menu and Secondary menu links
  */
 
+$squaresize: 2em;
+
 #main-menu {
   float: right;
   li  {
       background-color: $orangey;
-      width: 3em;
-      height: 3em;
+      width: $squaresize;
+      height: $squaresize;
       white-space: nowrap;
       margin: 0.5em;
       a {
         position: relative;
-        top: 1em;
+        top: 0.25em;
         left: -1.25em;
         text-decoration: none;
         color: #003e67;
