--- a/drupal/sites/all/themes/adorazen-blue/sass/navigation.scss
+++ b/drupal/sites/all/themes/adorazen-blue/sass/navigation.scss
@@ -89,6 +89,7 @@ $squaresize: 2em;
       white-space: nowrap;
       margin: 0.5em;
       a {
+        display: inline-block;
         position: relative;
         top: 0.25em;
         left: -1.25em;
